# AnotherLLMFromScratch

./: README.md  pyproject.toml  test.py
.cursor/rules/: root.mdc  stepbystep.mdc
.memory/: setup_log.md  trainer_refactoring.md  trainer_updates.md
another_llm_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configs/: README.md  gpt_125m_example.yaml
configs/model/: gpt_123m.yaml  gpt_1b.yaml
configs/train/: pretrain.yaml  pretrain_example.yaml
data/: README.md
docs/: 01_project_overview.md  02_requirements.md  03_tech_stack.md  04_user_flow.md  05_project_stureture.md
src/: README.md
src/dataset/: README.md  __init__.py  base.py  dpo.py  pretrain.py  sft.py
src/models/: __init__.py  modeling_auto.py
src/models/components/: __init__.py
src/models/components/attention/: grouped_query.py  multi_head.py
src/models/components/embeddings/: learned_absolute.py  rotary.py
src/models/components/feedforward/: __init__.py  gelu.py  swiglu.py
src/models/components/norms/: __init__.py  layer_norm.py  rms_norm.py
src/models/gpt2/: attention.py  config.py  model.py
src/models/qwen2/: attention.py  model.py
src/trainer/: README.md  __init__.py  base_trainer.py  checkpoint.py  dpo_trainer.py  grpo_trainer.py  optimizer.py  sft_trainer.py  trainer.py
src/trainer/examples/: README.md  basic_trainer_example.py  distributed_train_example.py
src/trainer/tutorial/: __init__.py  optimizer_from_scratch.py  trainer_from_scratch.py
src/utils/: __init__.py  distributed.py  distributed_communication_guide.md  logger.py
